# assembly-curator

./: .dockerignore  .gitignore  Dockerfile  QuickStart.md  README.md  overview.html  pyproject.toml
assembler_tools/: Assembly.py  AssemblyImporter.py  Contig.py  ContigGroup.py  ani_dendrogram.py  contig_curator.py  dotplots.py  dotplots_minimap2.py  dotplots_rrwick.py  huey_main.py  huey_tasks.py  main.py  main_base.py  main_bottle.py  main_flask.py  main_pywebio.py  rrwick_dotplots.py  utils.py
assembler_tools/templates/: assemblies.css  assemblies.html  assemblies.html.jinja2  assemblies.js  index.html  index.html.jinja2  overview.html
assembly_curator/: Assembly.py  AssemblyImporter.py  ContigGroup.py  ani_dendrogram.py  contig_curator.py  dnaapler_wrapper.py  dotplots_minimap2.py  dotplots_rrwick.py  gtdbtk_add_ncbi_taxonomy.py  huey_config.py  huey_main.py  huey_tasks.py  main.py  main_base.py  main_flask.py  phylogenetic_tree.py  put_dataframe.py  utils.py
assembly_curator/templates/: assemblies.css  assemblies.html.jinja2  assemblies.js  assemblies_dynamic.css.jinja2  dotplot.js  graphgenomeviewer.js  index.html.jinja2
plugins/: FlyeImporter.py  LjaImporter.py
plugins/inactive/: HifiasmImporter.py  PacbioImporter.py  SimpleFastaImporter.py
