[project]
name = "assembly-curator"
version = "0.0.1"
description = "Quickly generate consensus assemblies for bacterial genomes"
authors = [
    { author = "MrTomRod", email = "roder.thomas@gmail.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.6.0",
    "pandas>=2.2.2",
    "scipy>=1.15",
    "plotly>=5.22.0",
    "jinja2>=3.1.4",
    "pyskani>=0.1.2",
    "seaborn>=0.13.2",
    "tornado>=6.4.1",
    "pywebio>=1.8.3",
    "flask>=3.0.3",
    "dill>=0.3.8",
    "huey>=2.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["assembly_curator"]
